--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #1e555c;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+
+    text-align: center;
+    margin: auto;
+    color: white;
+}
+
+#break-zone {
+    font-size: 25px;
+    width: 250px;
+    display: inline-block;
+    
+}
+
+
+#break-length {
+    display: inline-block;
+    width: 30px;
+}
+
+button {
+    margin: 15px;
+    font-size: 20px;
+}
+
+#session-zone {
+    font-size: 25px;
+    width: 250px;
+    display: inline-block;
+}
+
+#session-length {
+    display: inline-block;
+    width: 30px;
+}
+
+#time-display { 
+    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#wrapper {
+    border: 5px solid #13353a;
+    height: 160px;
+    width: 270px;
+    border-radius: 50px;
+   
+}
+
+#timer-label {
+    margin: 10px;
+    font-size: 35px;
+}
+
+#timer-left {
+    font-size: 70px;
+}
+
+#time-control {
+    height: 50px;
 }
